--- a/PierresTreats/Views/Home/Index.cshtml
+++ b/PierresTreats/Views/Home/Index.cshtml
@@ -1,4 +1,35 @@
+@using PierresTreats.Models;
+@model List<PierresTreats.Models.Treat>;
+
 <h1>Welcome to the To Pierre's Treats!</h1>
 
-<p>@Html.ActionLink("See all treats", "Index", "Treats")</p>
-<p>@Html.ActionLink("See all flavors", "Index", "Flavors")</p>
+<p>@Html.ActionLink("LOG IN", "Index", "Account")</p>
+
+<h1>Treats</h1>
+
+@if (@Model.Count == 0)
+{
+  <h3>No treats have been added yet!</h3>
+} 
+
+@foreach (Treat treat in Model)
+{
+  <li>@Html.ActionLink($"{treat.TreatName}", "Details", "Treat", new { id = treat.TreatId })</li>
+}
+
+<p>@Html.ActionLink("Add new treat", "Create", "Treat")</p>
+
+<h1>Flavors</h1>
+
+@if (@ViewBag.Flavors.Count == 0)
+{
+  <h3>No flavors have been added yet!</h3>
+} 
+
+@foreach (Flavor flavor in ViewBag.Flavors)
+{
+  <li>@Html.ActionLink($"{flavor.Description}", "Details", "Treat", new { id = flavor.FlavorId })</li>
+}
+
+
+<p>@Html.ActionLink("Add new flavor", "Create", "Flavor")</p>
