finally got this running fixed home controller

--- a/PierresTreats/Views/Home/Index.cshtml
+++ b/PierresTreats/Views/Home/Index.cshtml
@@ -33,3 +33,7 @@
 
 
 <p>@Html.ActionLink("Add new flavor", "Create", "Flavor")</p>
+@* database query 
+get treats and send down as List
+editing a flavor did not work
+boilerplate to navigate  *@
